# prime-rl

./: CHANGELOG.md  Dockerfile.cuda  pyproject.toml
configs/lumi/: danish_alignment_eval_multi.toml  danish_alignment_rl_multi_node.toml  danish_alignment_sft_single_node.toml  rl_multi_node.toml  rl_single_node.toml  sft_single_node.toml
docs/: lumi.md
eval/: manual_eval_prompts_da.jsonl
scripts/: build_lumi_overlay_prime_rl.sh  build_overlay_minimal.sh  danish_reward_judge_prompt.txt  generate_eval_outputs.py  lumi_submit_multi_eval.py  lumi_submit_multi_node_rl.sh  lumi_submit_rl.sh  lumi_submit_sft.sh  render_eval_comparison.py  score_eval_outputs.py  slurm_tmux.sh  tmux.sh
src/prime_rl/configs/: env_server.py  inference.py  orchestrator.py  rl.py  sft.py  trainer.py
src/prime_rl/entrypoints/: inference.py  rl.py
src/prime_rl/inference/: patches.py
src/prime_rl/inference/vllm/: server.py  serving_chat_with_tokens.py
src/prime_rl/orchestrator/: orchestrator.py  scheduler.py  utils.py  vf_utils.py
src/prime_rl/orchestrator/env_server/: env_server.py
src/prime_rl/templates/: inference.sbatch.j2
src/prime_rl/templates/lumi/: multi_node_rl.sbatch.j2  single_node_rl_lumi.sbatch.j2  single_node_sft.sbatch.j2  single_node_sft_lumi.sbatch.j2
src/prime_rl/trainer/: ckpt.py  lora.py  model.py  runs.py  transformers_compat.py  utils.py
src/prime_rl/trainer/models/: __init__.py  base.py
src/prime_rl/trainer/models/layers/lora/: __init__.py  multi_moe.py
src/prime_rl/trainer/models/nemotron_h/: converting_nemotron_h.py  modeling_nemotron_h.py
src/prime_rl/trainer/models/qwen3_5_moe/: modeling_qwen3_5_moe.py
src/prime_rl/trainer/rl/: train.py
src/prime_rl/trainer/rl/broadcast/: __init__.py  filesystem.py  nccl.py
src/prime_rl/trainer/sft/: data.py  train.py
src/prime_rl/utils/: cp.py  pathing.py
